[metadata]
name = xch
author = researcx
author-email = identiboorustaff@yandex.com
summary = imageboard
license = WTFPL-3.0
description-file =
  README.md
home-page = https://github.com/researcx
requires-python = >=3.4
classifier =
  Development Status :: Rolling Release
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python
[files]
packages =
  xch
data_files =
  templates = templates/*
  static = static/*
