[metadata]
name = xch
author = xch contributors (https://github.com/researcx/xch)
author-email = none-available
summary = imageboard
license = LICENSE.md
description-file =
  README.md
license-file =
  README.md
home-page = https://github.com/researcx
requires-python = >=3.4
classifier =
  Development Status :: Rolling Release
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python

[files]
packages =
  xch
data_files =
  templates = templates/*
  static = _rsc/*
  config = config/*
  database = database/*